--- a/css/master.css
+++ b/css/master.css
@@ -59,7 +59,7 @@ header:after {
   border-radius: 5px;
   color: #FFF;
   display: inline-block;
-  font-size: 16px;
+  font-size: 12px;
   line-height: initial;
   padding: 10px 10px;
   text-align: center;
@@ -157,23 +157,23 @@ h1 {
 .main-section {
   background-color: #f4f9fd;
   text-align: center;
-  align-items: center;
+  padding-bottom: 50px;
 }
 
 .cube {
+  margin: auto;
   text-align: center;
   width: 55%;
-  margin: auto;
 }
 
 .cube img {
-  margin-top: 30px;
   height: 200px;
+  margin-top: 30px;
 }
 
 h2 {
-  margin-bottom: 20px;
   font-size: 30px;
+  margin-bottom: 20px;
 }
 
 .cube p {
@@ -181,19 +181,137 @@ h2 {
   padding-bottom: 50px;
 }
 
-.section-table {
-  width: 80%;
+.row {
   background-color: #FFF;
-  height: 300px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px 1px #bfccd9;
+  margin: auto;
+  margin-bottom: 50px;
+  width: 80%;
+}
+
+.row:after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+.row-img {
+  float: left;
+  padding: 70px;
+  width: 30%;
+}
+
+.row-img img {
+  height: 120px;
+  padding: 10px;
+}
+
+.row-text {
+  float: left;
+  padding: 70px 20px;
+  text-align: left;
+  width: 60%;
+}
+
+.row-text p {
+  line-height: 25px;
+}
+
+h4 {
+  font-size: 20px;
+  margin-bottom: 24px;
+}
+
+.row .button, .columns .button {
+  padding: 20px 30px;
+}
+
+.row-text h5 {
+  line-height: 0.1em;
+  margin: 35px 0;
+  text-transform: uppercase;
+  border-bottom: 1px solid #33475b;
+}
+
+h5 span {
+  background: #FFF;
+  padding-right: 50px;
+}
+
+.row-text ul {
+  display: inline-block;
+  list-style: none;
+}
+
+.row-text li {
+  display: inline-block;
+  margin-right: 25px;
+}
+
+.fa-check-circle {
+  color: #ff7a59;
+  margin-right: 8px;
+}
+
+.columns {
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  width: 80%;
+}
+
+.column-1, .column-2, .column-3 {
+  background-color: #FFF;
+  border-radius: 5px;
+  box-shadow: 0 0 5px 1px #bfccd9;
+  font-size: 15px;
+  padding: 25px 40px;
+  width: 30%;
+}
+
+.columns img {
+  height: 120px;
+  padding: 10px;
+}
+
+.columns h5 {
+  border-top: 1px solid #33475b;
+  padding: 30px 0;
+  text-transform: uppercase;
+}
+
+.columns p {
+  margin-bottom: 50px;
+}
+
+.columns ul {
+  font-size: 14px;
+  list-style: none;
+  text-align: left;
+}
+
+.columns .button {
+  margin-top: 30px;
+}
+
+.table {
+  background-image: linear-gradient(45deg, #00a4bd, #00bda5);
+  height: 500px;
+  text-align: center;
+  color: #FFF;
   margin: auto;
 }
 
+h3 {
 
+  padding-top: 40px;
+  font-size: 30px;
+  margin-bottom: 30px;
+}
 
-.column-1, .column-2, .column-3 {
-  background-color: red;
-  height: 400px;
-  display: inline-block;
-  width: calc(80% / 3);
+.table-text {
+  width: 80%;
   margin: auto;
+
 }
