--- a/css/master.css
+++ b/css/master.css
@@ -144,7 +144,7 @@ h1 {
   font-size: 12px;
 }
 
-.hero-text-border {
+.hero-text--border {
   background-color: #afebe4;
   border-bottom: 4px solid #33475b;
   border-top: 4px solid #33475b;
@@ -196,13 +196,13 @@ h2 {
   display: table;
 }
 
-.row-img {
+.row__img {
   float: left;
   padding: 70px;
   width: 30%;
 }
 
-.row-img img {
+.row__img img {
   height: 120px;
   padding: 10px;
 }
@@ -314,7 +314,7 @@ h3 {
   font-size: 16px;
 }
 
-.table-text {
+.table__text {
   margin: auto;
   margin-bottom: 40px;
   width: 80%;
@@ -325,7 +325,7 @@ h3 {
   border-right: 1px solid #FFF;
   display: inline-block;
   padding: 30px;
-  width: 15%;
+  width: 18%;
 }
 
 .table-body:nth-child(5), .table-body:nth-child(10) {
@@ -345,5 +345,78 @@ h3 {
 }
 
 .table-body span {
+  font-size: 12px;
+}
+
+.bot-section-a {
+  margin: auto;
+  width: 60%;
+}
+
+.bot-section-a__text {
+  display: inline-block;
+  font-size: 36px;
+  font-weight: 700;
+  padding: 30px 0;
+  width: 25%;
+}
+
+.bot-section-a__text small {
+  display: block;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 25px;
+  padding: 30px 0;
+}
+
+.bot-section-a__customers {
+  display: inline-block;
+  text-align: right;
+  width: 74%;
+}
+
+.bot-section-a__customers img {
+  margin: 15px;
+  max-width: 100px;
+  vertical-align: middle;
+}
+
+.bot-section-b {
+  margin: auto;
+  width: 80%;
+}
+
+.bot-section-b__text {
+  display: inline-block;
+  margin: 40px 0;
+  vertical-align: middle;
+  width: 40%;
+}
+
+.bot-section-b__text p {
   font-size: 14px;
+  margin: 30px 0;
+}
+
+.bot-section-b__text .button {
+  padding: 20px;
+}
+
+.bot-section-b__text small {
+  display: block;
+  font-size: 10px;
+  margin-top: 30px;
+}
+
+
+.bot-section-b__img {
+  display: inline-block;
+  padding-right: 50px;
+  text-align: right;
+  width: 55%;
+}
+
+.bot-section-b__img img {
+  height: 300px;
+  vertical-align: middle;
 }
